# Subset-Extended-Kalman-Filter

./: .gitignore  1 - 1D Parameter Drift.ipynb  2 - CSTR.ipynb  3 - Glucose.ipynb  4 - FCC.ipynb  5 - Classification.ipynb  README.md  Updating NN for PSE Literature.xlsx  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
examples/TCLab/: TCLab.py
examples/second-order ODE/: README.md  config.json  plant_measurement.py  run_all.py  secondOrderODE.py  train_model.py  update_model.py
figures/manim/: manim.cfg  scene.py
notebooks/: 0-scratch.ipynb
scripts/: TCLab.ipynb  TCLab.py  TCLab_NNv0.pt
scripts/TCLab/: TCLab.py  TCLab_NNv0_tl.pt
scripts/second-order ODE/: model.pth  secondOrderODE.py  train_model.py
sekf/: __init__.py  config.py  modeling.py  optimizers.py  utilities.py  viz.py
src/sekf/: __init__.py  config.py  modeling.py  optimizers.py  viz.py
tests/: test_environment.py
transfer/dampedSpring/: dampedSpring.py  modelv0.pth  modelv0_weights.pth  train_initial_model.py  train_pretrainSEKF.py  transfer_finetuning.py  transfer_finetuning_SEKF.py  transfer_retraining.py
transfer/dampedSpring/data/: allTrials_metrics.csv  bestResult_metrics.csv  model_weights.pth  training_metrics.npz
transfer/dampedSpring/data/transfer/: X.npz  m(1.1)_allTrials_metrics.csv  m(1.1)_bestResult_metrics.csv
transfer/dampedSpring/data/transfer_finetuning/: c(0.45)_allTrials_metrics.csv  c(0.45)_bestResult_metrics.csv  (+22 more)
utils/: __init__.py  cstr_experiment.py  fcc.py  glucose.py  modeling.py  optimizers.py  sine_experiment.py  vis.py
(+27 files in other folders)
