[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sekf"
version = "0.1.0"
description = "A package for Subset Extended Kalman Filter"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
license = { file="LICENSE" }
dependencies = [
    'numpy',
    'scipy',
    'matplotlib',
    'pandas',
    'scikit-learn',
    'seaborn',
    'torch'
]