[project]
name = "sekf"
version = "0.0.2"
# dynamic = ["version"]
description = "The Subset Extended Kalman Filter"
keywords = []
authors = [
    {name="Joshua Hammond", email="joshua.hammond@utexas.edu"}
]
readme = "README.md"
license = "MIT"  # Possibly Apache which explicitly disallows trademarking
classifiers = [
]
requires-python = ">=3.8"
dependencies = [
    "jtoolbox@git+https://github.com/joshuaeh/jtoolbox.git",
    "jupyter>=1.1.1",
    "matplotlib",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "seaborn",
    "torch>=2.5.1",
    "tqdm>=4.67.1"
]
[project.optional-dependencies]
dev = []

[tool.uv.sources]
jtoolbox = { git = "https://github.com/joshuaeh/jtoolbox/" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/figures",
    "/notebooks",
    "/examples"
]

[tool.hatch.build.targets.wheel]
packages = ["src/sekf"]

[tool.hatch.metadata]
allow-direct-references = true